--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular-devkit/build-angular": "~13.3.6",
     "@angular/cli": "~13.3.6",
     "@angular/compiler-cli": "~13.3.0",
+    "@schematics/angular": "^13.3.6",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "@types/sockjs-client": "^1.5.1",
